--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
+    "axios": "^0.21.1",
+    "jquery": "^3.6.0",
     "trix": "^1.2.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
@@ -15,5 +17,9 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^3.11.2"
-  }
+  },
+  "main": "index.js",
+  "repository": "git@github.com:kouta055/toukouSite.git",
+  "author": "kouta055 <hayabusa020255@gmail.com>",
+  "license": "MIT"
 }
